# audio-recoder

./: AGENTS.md  Cargo.toml
docs/: 2026-07-18-offline-ntp-audio-latency-implementation-plan.md  2026-07-18-offline-ntp-audio-latency-implementation-status.md  2026-07-19-offline-ntp-audio-latency-review.md  field-acceptance-checklist-v2.md
docs/superpowers/plans/: 2026-07-02-fsk-timestamp-mark-plan.md  2026-07-19-offline-ntp-audio-latency-v2.md
docs/superpowers/specs/: 2026-06-10-audio-recorder-design.md  2026-07-02-fsk-timestamp-mark-design.md  2026-07-19-offline-ntp-audio-latency-v2-design.md
scripts/time-sync/: Parse-Stripchart.ps1  assert-verify-readonly.ps1  install-chrony-server.sh  sync-windows-time.cmd  sync-windows-time.ps1  verify-chrony-server.sh  verify-windows-time.cmd  verify-windows-time.ps1
scripts/time-sync/samples/: stripchart-en.txt  stripchart-zh.txt
src/: fsk_marker.rs  main.rs
src/capture/: macos_speaker.rs  microphone.rs  mod.rs  wasapi_loopback.rs
src/timing/: mod.rs  qpc_utc.rs  sha256.rs  sidecar.rs  sync_report.rs
