[package]
name = "audio-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
hound = "3.5"
lexopt = "0.3"
ctrlc = "3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "7", features = ["macos_13_0"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
